update resolved bug block 3 img and scrollbar-horizontal

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
     display: flex;
 }
 
+.Block3 {
+    display: flex;
+}
+
 .Block4 {
     display: flex;
 }
