--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   height: 100vh;
   font-size: 18px;
   font-family: var(--Font-Barlow);
-  /*overflow-x: hidden;*/
+  overflow-x: hidden;
 }
 
 @keyframes opacity {
@@ -160,9 +160,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*background-color: green;*/
+ /* background-color: green;*/
   width: 340px;
-  margin: 35px 40px 35px 0px;
+  margin: 20px;
   gap: 50px;
 }
 
